# byhormiga

./: .env  .env.example  .pre-commit-config.yaml  GUIA_ADMIN.md  GUIA_ADMIN_BYHORMIGA.md  GUIA_ADMIN_COMPLETA.md  Makefile  README.md  agents.md  docker-compose.yml  skills.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  manage.py  nixpacks.toml  pyproject.toml  requirements.txt
backend/blog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_rename_excerpt_post_description.py  0003_alter_post_created_at_alter_post_id_and_more.py
backend/byhormiga/: asgi.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
backend/contact/: admin.py  models.py  serializers.py  urls.py  views.py
backend/contact/migrations/: 0001_initial.py  0002_contactmessage_updated_at_and_more.py
backend/cx-bot-monitor/: package-lock.json  package.json
backend/cx-bot-monitor/src/: cron.ts
backend/events/: admin.py  models.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_event_active_since_event_average_attendance_and_more.py  0002_eventphoto.py  0003_event_recap_video.py  0003_eventphoto_updated_at_alter_event_created_at_and_more.py  0004_eventphoto_unique_event_photo_order.py
backend/gallery/: admin.py  models.py  serializers.py  views.py
backend/gallery/migrations/: 0001_initial.py
backend/partners/: admin.py  models.py  serializers.py  urls.py  views.py
backend/partners/migrations/: 0001_initial.py  (+1 more)
backend/team/: models.py
(+64 files in other folders)
